# bulk-renamer-plugin

./: README.md  meson.build
data/: io.github.jeremypw.bulk-renamer-plugin.appdata.xml.in  io.github.jeremypw.bulk-renamer.appdata.xml.in  meson.build
debian/: changelog  control  copyright
po/: POTFILES  fr.po  io.github.jeremypw.bulk-renamer-plugin.pot  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
src/: BulkRenamer.vala  Modifier.vala  RenamerDialog.vala  io.github.jeremypw.bulk-renamer-plugin.plug  io.github.jeremypw.bulk-renamer.plug  meson.build  plugin.vala
